--- a/public/portfolio/KTB 자산운용/index.css
+++ b/public/portfolio/KTB 자산운용/index.css
@@ -30,7 +30,7 @@ label[for] {
   margin-right: auto;
 }
 .con {
-  max-width: 1200px;
+  max-width: 1250px;
 }
 .con-2{
     max-width: 1280px;
@@ -175,15 +175,16 @@ label[for] {
 /**/
 .main-hd{
   
-    background-color: #2c2c92;
+    background-color: #
+    ;
     position: fixed;
     height: 70px;
     width: 100%;
     z-index: 999;
 }
 .hd-menu{
-    position: fixed;
-  left: 20%;
+  margin-top:8px;
+    
 z-index: 999;}
 .menu-box>ul>li{
     margin-left: 70px;}
@@ -201,15 +202,37 @@ z-index: 999;}
     width: 122px;
     height: 25px;
     margin-top: 16px;
+    margin-left: 25px;
 }
 .bn-c{
     min-width: 1903px;
     height: 92vh;
     background-color: #2c2c92 ;
+    position: relative;
+}
+.scroll-down{
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  
+}
+.menu-box{
+  box-sizing: border-box;
+  padding-left:70px;
+}
+.menu-box>ul>li{
+  float: left;
 }
 .lns{
     color: white;
-    margin-left: 250px;
+    margin-left: 150px;
+    margin-top: 17px;
+}
+.lns>span:nth-of-type(1){
+  margin-top: 10px;
+  padding-right:40px; 
+  display: inline-block;
 }
 .lns>.slde-icon{
     color: white;
@@ -231,15 +254,14 @@ z-index: 999;}
 }
 .bn-img{
     position: absolute;
-    top: 25%;
-    left: 20%;
+    top: 20%;
+    left: 18.5%;
     
 }
 .section-2{
      background-color: #f2f2f2;
      width: 100%;
-     height: 92vh;
-     margin-top: 80px;
+     height: 100vh;
 }
 .text-box{
     text-align: center;
@@ -247,11 +269,14 @@ z-index: 999;}
 .sec-menu-box-2{
     text-align: center;
 }
+.sec-menu-box-2>ul>li>a:nth-of-type(1){
+  font-weight: 500;
+}
 .sec-menu-box-2>ul>li>a{
     display: block;
     font-size: 20px;
     margin: 0 10px ;
-    font-weight: bold;
+    color: #737373;
 }
 .sec-menu-box-2>ul>li:nth-of-type(2)>a:hover,.sec-menu-box-2>ul>li:nth-of-type(3)>a:hover{color: #1b2473;
     border-bottom: #1b2473 solid 2px;
@@ -297,6 +322,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 10px;
+    box-sizing: border-box;
     background-color: white;
 }
 .my-slider-1 .item::after {
@@ -309,6 +335,10 @@ body {
     background: url(http://www.i-ktb.com/static/pc/images/main/bg_box.gif) 0 0
         no-repeat;
     border: none;
+    z-index: 999;
+}
+.owl-stage-outer{
+  margin-bottom: 40px;
 }
 .my-slider-1 .item:hover:after {
     content: "";
@@ -322,9 +352,22 @@ body {
     border: none;
     z-index: 999;
 }
+.my-slider-1 .item::before {
+  content:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: calc(100% + 3px);
+  height: calc(100% + 3px);
+  box-sizing: border-box;
+  border: solid 3px rgba(44,44,146,0);
+}
+.my-slider-1 .item:hover::before {
+  border: solid 3px rgba(44,44,146,1);
+}
 .my-slider-1 .item:hover {
-    border: solid 3px #2c2c92;
-    box-shadow:8px 5px 10px rgba(210,210,210,1)}
+    box-shadow:8px 5px 10px rgba(210,210,210,1);
+}
 
 .item > h4 > div > div {
     padding: 20px;
@@ -368,7 +411,8 @@ button {
     font-weight: normal;
 }
 .my-slider-1{
-    margin-top:50px;
+  margin-top:50px;
+  
 }
 .text-box-3{
     text-align: center;
@@ -412,9 +456,12 @@ h6{
 .bot-title>a{
   display: block;
   margin-bottom: 15px;
+  font-size: 14px;
+  font-weight: 500;
+  color: #545454;
 }
 .section-3{
-  height: 650px ;
+  height: 88vh ;
 }
 .in-img-1{
   position: relative;
@@ -433,15 +480,16 @@ h6{
   padding-left: 40px;
 }
 .in-text>h2{
-  font-weight: 300;
+  font-weight: 200;
   font-size:28px;
+  color: rgb(105, 105, 105);
 }
 .in-text>span{
   position: relative;
   left:45px;
   padding-left: 45px;
   color: #2c2c92;
-  font-weight: bold;
+  font-weight: 400;
   font-size: 15px;
 }
 .in-text>span::before{
@@ -485,15 +533,16 @@ h6{
   padding-left: 40px;
 }
 .in-text-2>h2{
-  font-weight: 300;
+  font-weight: 200;
   font-size:28px;
+  color: rgb(105, 105, 105);
 }
 .in-text-2>span{
   position: relative;
   left:45px;
   padding-left: 45px;
   color: #2c2c92;
-  font-weight: bold;
+  font-weight: 400;
   font-size: 15px;
 }
 .in-text-2>span::before{
@@ -516,16 +565,23 @@ h6{
   background-color: #22223e;
   height:850px ;
   width: 1903px;
-  margin-top: 100px;
 }
 .sec4-title{
   text-align: center;
-  color: white;font-size: 23px;
+  color: white;font-size: 25px;
   padding-top: 100px;
+  font-weight: 400;
 }
 .sec4-title>h6{
-  color: white;
-  font-size: 15px;
+  color: #fff;
+  font-size: 18px;
+  margin-top:10px;
+  font-weight: 300;
+  line-height: 26px;
+
+}
+.sec4-title>h1{
+  font-weight: 500;
 }
 .sec4-img{
   margin-top: 50px;
@@ -535,12 +591,21 @@ h6{
   color: white;
 }
 .sec4-text>ul>li{
-  padding-top: 40px;
+  padding-top: 30px;
   border-bottom: solid 1px rgba(255, 255, 255, 0.178);
-  padding-right: 150px;
+  padding-right: 100px;
   padding-left: 70px;
   position: relative; 
-  padding-bottom: 30px;
+  padding-bottom: 20px;
+}
+.sec4-text>ul>li>a{
+  font-size: 20px;
+  color: #fff;
+  line-height: 30px;
+  padding: 0 20px 0 15px;
+  display: block;
+  font-weight: 300;
+
 }
 .sec4-text>ul>li:nth-of-type(1)>a::before{
   content: "";
@@ -582,12 +647,15 @@ h6{
 .sec4-text>a{
   position: absolute;
   top:20%;
-  left: 320px;
+  left: 350px;
   font-size: 13px;
   color: #ffe6bc;
 }
 .sec4-text>a>span{
   font-size: 20px;
+}
+.sec4-text-box{
+  margin-left: 20px;
 }
 .vd-text{
   padding: 20px;
@@ -610,24 +678,31 @@ h6{
 .sec5-inner {
   padding-top:0;
 }
-.copylight{
+.copyright{
   background-color: #282828;
   width: 100%;
   height: 300px;
   position: relative;
   bottom: 0;
 }
+.cp-t-bar>ul{
+  margin-left: 10px;
+}
 .cp-t-bar>ul>li{
-  color: rgba(255, 255, 255, 0.356);
-  margin: 30px;
+  color: #adadae;
+  margin:22px 30px 22px 30px;
   margin-left: 0;
+  font-weight: 300;
+  font-size: 16px;
+  
 }
 .cd-bar{
   border-bottom: solid 1px rgba(255, 255, 255, 0.226);
 }
 .cd-text,.cd-text-2,.cd-text-3{
   font-size: 14px;
-  color: rgba(255, 255, 255, 0.384);
+  color: #888888;
+  font-weight: 300;
 }
 .cd-text>div>a,.cd-text-2>div>a,.cd-text-3>div>a{
   padding-left: 10px;
@@ -644,7 +719,7 @@ h6{
   right: 20%;
 
 }
-.copylight{
+.copyright{
   position: relative;
 }
 .title>h1{
@@ -658,6 +733,9 @@ h6{
 }
 .title>div{
   margin-bottom: 10px;
+  color: #5f5f5f;
+  font-weight: 400;
+  font-size: 18px;
 }
 .title{
   margin-bottom: 50px;
@@ -667,14 +745,20 @@ h6{
 }
 .text-box-3>h1{
   font-size: 50px;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: -1px;
+
 }
 .text-box-3>h3{
-  font-weight: normal;
   font-size: 18px;
+  font-weight: 300;
+  line-height: 26px;
   color: #545454;
+  margin-top:15px;
 }
 .text-box-3{
-  margin-top:100px;
+  padding-top:100px; 
   margin-bottom:70px;
 }
 .plus{
@@ -726,8 +810,8 @@ h6{
 }
 .scroll{
   position: fixed;
-  right: 15%;
-  bottom: 16%;
+  right: 13%;
+  bottom: 5%;
   z-index: 999;
 
 }
@@ -737,4 +821,47 @@ h6{
 }
 .scroll>img{
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.116);
+}
+
+.sc-ev>ul>li{
+  width: 8px;
+  height: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.788);
+  display: block;
+  position: fixed;
+  top:45.2%;
+  left: 14px;
+  margin: 10px;
+}
+.sc-ev>ul>li:nth-of-type(2){
+  top: 47.2%;
+}
+.sc-ev>ul>li:nth-of-type(3){
+  top: 49.2%;
+}
+.sc-ev>ul>li:nth-of-type(4){
+  top: 51.2%;
+
+}
+.sc-ev>ul>li.active{
+  border-right: 10px solid transparent;
+  border-top:10px solid rgb(0, 0, 0);
+  width: 0;
+  height: 0; 
+  border-bottom:none; 
+}
+.bn-c::after{
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-top: 85px solid transparent;
+  border-right: 85px solid white;
+  position: absolute;
+  bottom: 0;
+  right:  0;
+}
+.news{
+  height: 100px;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
 }
