--- a/public/portfolio/KTB 자산운용/index.css
+++ b/public/portfolio/KTB 자산운용/index.css
@@ -187,7 +187,7 @@ label[for] {
     
 z-index: 999;}
 .menu-box>ul>li{
-    margin-left: 70px;}
+    margin-left: 65px;}
 .menu-box>ul>li>a{
     display: block;
     margin-top: 20px;
@@ -564,7 +564,7 @@ h6{
 .section-4{
   background-color: #22223e;
   height:850px ;
-  width: 1903px;
+  margin: 0;
 }
 .sec4-title{
   text-align: center;
@@ -861,7 +861,171 @@ h6{
   right:  0;
 }
 .news{
-  height: 100px;
+  height: 70px;
   width: 100%;
   background-color: rgb(255, 255, 255);
+}
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+.swiper-container {
+  width: 100%;
+  height: 70px;
+}
+
+.swiper-container>.swiper-wrapper>.swiper-slide {
+  margin-left:170px; 
+  align-items: center;
+
+  font-size: 16px;overflow:hidden;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  float: left;
+}
+
+.swiper-pagination{
+display:none;
+}
+.swiper-container{
+position:relative;
+}
+.swiper-container>.swiper-button-next{
+position:absolute;
+top:80% !important;
+left:23% !important;
+transform:rotate(270deg);
+background-image:url(https://image.flaticon.com/icons/svg/626/626037.svg)!important;
+background-size:10px !important;
+}
+.swiper-container>.swiper-button-prev{
+transform:rotate(450deg);
+background-image:url(https://image.flaticon.com/icons/svg/626/626037.svg)!important;
+    top:60% !important;
+left:23.05% !important;
+background-size:10px !important;
+}
+.news-text{
+position:absolute;
+top:30%;
+left:18%;
+font-weight: 600;
+z-index:999;
+color: #111;
+
+
+font-size:19px;
+}
+
+.swiper-container>.swiper-button-next, .swiper-button-prev{
+width:12px !important;
+height:20px !important;
+z-index: 999;
+}
+.news{
+  position: relative;
+}
+.swiper-container{
+  position: relative;
+}
+.swiper-container>.swiper-wrapper{
+  width: 1280px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.swiper-container-2 .swiper-pagination .swiper-pagination-current::before {
+  content:"0";
+  display:inline-block;
+}
+.swiper-container-2 .swiper-pagination .swiper-pagination-total::before {
+  content:"0";
+  display:inline-block;
+}
+.swiper-container>.swiper-slide {
+  background-color: white !important;
+}
+/**/
+.swiper-container-2 {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.swiper-container-2>.swiper-wrapper>.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.swiper-container-2>.swiper-button-prev{
+position:absolute;
+top:90% !important;
+left:18% !important;
+background-image:url(https://image.flaticon.com/icons/svg/892/892512.svg)!important;
+    top:90% !important;
+
+}
+.swiper-container-2>.swiper-button-next{
+position:absolute;
+top:90% !important;
+left:20% !important;
+    background-image:url(https://image.flaticon.com/icons/svg/892/892512.svg)!important;
+transform:rotate(180deg);
+
+}
+.swiper-container-2>.swiper-wrapper>.swiper-slide{
+background-color:#2c2c92 ;
+}
+.swiper-container-2{
+    background-color:#2c2c92 ;
+height:92vh;
+min-width:1903px;
+}
+.swiper-container-2 .swiper-pagination {
+  display: block
+}
+.swiper-container-2 .swiper-pagination .swiper-pagination-current::before {
+content:"0";
+display:inline-block;
+}
+.swiper-container-2 .swiper-pagination .swiper-pagination-total::before {
+content:"0";
+display:inline-block;
+z-index: 999;
+}
+
+html{
+  overflow-x:hidden; 
 }
